--- a/app/build.gradle
+++ b/app/build.gradle
@@ -11,7 +11,7 @@ android {
 
     defaultConfig {
         applicationId "com.ikarimeister.marvelapp"
-        minSdk 33
+        minSdk 32
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -59,6 +59,8 @@ dependencies {
     implementation 'androidx.compose.ui:ui-tooling-preview'
     implementation 'androidx.compose.material3:material3'
     implementation 'androidx.compose.runtime:runtime-livedata'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+    implementation("io.coil-kt:coil-compose:2.2.2")
     implementation 'com.google.dagger:hilt-android:2.45'
     kapt 'com.google.dagger:hilt-compiler:2.45'
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
